[package]
name = "bevy_btml"
version = "0.1.1"
edition = "2024"
authors = ["mstjr <mat.stjr@gmail.com>"]
description = "A macro to create Bevy entity-component hierarchies using an HTML-like syntax."
license = "MIT"
readme = "README.md"
repository = "https://github.com/mstjr/bevy_btml" 
keywords = ["bevy", "ui", "macro", "html", "markup"]
categories = ["game-development", "gui", "rendering::data-formats"]

[dependencies]
bevy = { version = "0.17", default-features = false }
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = { version = "2.0.113", features = ["full", "extra-traits"] }

[lib]
proc-macro = true

[dev-dependencies]
bevy = "0.17"
